# biohackathon-2024-project-31

./: README.md
notebooks/: bh2024_pr31_diatom_metadata_step_by_step.ipynb  bh2024_pr31_extract_data_from_google_sheets.ipynb  bh2024_pr31_tutorial_case_study.ipynb  case-study.md  pyproject.toml
notebooks/whyqd_schemas/: FAIRtracks_convenience_schema_for_genomic_annotations.json  sheet1.CROSSWALK  sheet2.CROSSWALK  sheet3.CROSSWALK  sheet4.CROSSWALK
